# SparseMatrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
api/: sparsemat.h
cmake/: sparsemat-config.cmake.in
examples/: CMakeLists.txt  README.md  bench.cpp  demo.cpp  kalman.cpp  kalman.h
examples/link/: CMakeLists.txt  README.md  main.cpp
include/api/: sparsemat.h
include/operations/: add.h  cholesky.h  dense.h  diagonal.h  invert.h  kronecker.h  lu.h  multiply.h  shift.h  symmetric.h  trace.h  triangular.h  utils.h
include/sparsemat/api/: sparsemat.h
include/sparsemat/concepts/: concepts.h
include/sparsemat/operations/: add.h  cholesky.h  dense.h  diagonal.h  hadamard.h  invert.h  kronecker.h  lu.h  multiply.h  scale.h  shift.h  symmetric.h  trace.h  transpose.h  triangular.h  utils.h
operations/: cholesky.h  dense.h  hadamard.h  invert.h  lu.h  scale.h  symmetric.h  transpose.h  triangular.h
scripts/: README.md  amalgamate.py  generate.py  pre-commit  sample.csv
tests/: test_sparsemat.cpp
